--- a/index.html
+++ b/index.html
@@ -28,20 +28,39 @@
   <body>
     <header class="navbar">
       <div class="nav-title">
-        <a href="#home">Algy<span>Ng</span></a>
+        <a href="#home">AN<span>.</span></a>
       </div>
       <nav class="nav-list">
         <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about-me">About Me</a></li>
-          <li><a href="#education"></a>Education</li>
-          <li><a href="#hobbies"></a>Hobbies</li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#home" class="nav-link">Home</a></li>
+          <li><a href="#about-me" class="nav-link">About Me</a></li>
+          <li><a href="#education" class="nav-link">Education</a></li>
+          <li><a href="#hobbies" class="nav-link">Hobbies</a></li>
+          <li><a href="#contact" class="nav-link">Contact</a></li>
         </ul>
       </nav>
     </header>
     <main>
-      <article id="home"></article>
+      <article id="home">
+        <div class="home-content">
+          <div class="content-text">
+            <h3>Hello !</h3>
+            <h1>I'm <span>Algy F. C. Ngenget</span></h1>
+            <h3> <span>An</span> Informatics Engineering Student</h>
+            <p>From Universitas Katolik De La Salle Manado</p>
+            <a href="#about-me" class="aboutBtn">See More</a>
+          </div>
+          <aside class="content-img">
+            <img src="assets/home-foto.jpg" alt="home-foto" />
+          </aside>
+        </div>
+        <aside class="sosmed">
+          <a href="#"><i class="fab fa-facebook"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-github"></i></a>
+        </aside>
+      </article>
       <article id="about-me"></article>
       <article id="education"></article>
       <article id="hobbies"></article>
