--- a/index.html
+++ b/index.html
@@ -44,22 +44,24 @@
       <article id="home">
         <div class="home-content">
           <div class="content-text">
-            <h3>Hello !</h3>
+            <h2>Hello !</h2>
             <h1>I'm <span>Algy F. C. Ngenget</span></h1>
-            <h3> <span>An</span> Informatics Engineering Student</h>
+            <h3><span>An</span> Informatics Engineering Student</h3>
             <p>From Universitas Katolik De La Salle Manado</p>
             <a href="#about-me" class="aboutBtn">See More</a>
           </div>
-          <aside class="content-img">
-            <img src="assets/home-foto.jpg" alt="home-foto" />
+          <aside class="content-side">
+            <div class="content-img">
+              <img src="assets/home-foto.jpg" alt="home-foto" />
+            </div>
+            <div class="sosmed">
+              <a href="#"><i class="fab fa-facebook"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="#"><i class="fab fa-github"></i></a>
+            </div>
           </aside>
         </div>
-        <aside class="sosmed">
-          <a href="#"><i class="fab fa-facebook"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-github"></i></a>
-        </aside>
       </article>
       <article id="about-me"></article>
       <article id="education"></article>
