--- a/index.html
+++ b/index.html
@@ -24,11 +24,17 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="navbar">
       <div class="nav-title">
-        <a href="#home">AN<span>.</span></a>
+        <a href="#home">A<span>N</span>.</a>
       </div>
       <nav class="nav-list">
         <ul>
@@ -45,10 +51,12 @@
         <div class="home-content">
           <div class="content-text">
             <h2>Hello !</h2>
-            <h1>I'm <span>Algy F. C. Ngenget</span></h1>
+            <h1>I'm <span>Algy Ngenget</span></h1>
             <h3><span>An</span> Informatics Engineering Student</h3>
             <p>From Universitas Katolik De La Salle Manado</p>
-            <a href="#about-me" class="aboutBtn">See More</a>
+            <a href="#about-me" class="aboutBtn"
+              >See More <i class="fa-solid fa-arrow-right"></i>
+            </a>
           </div>
           <aside class="content-side">
             <div class="content-img">
