smntra navbar toggle

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
           <li><a href="#contact" class="nav-link">Contact</a></li>
         </ul>
       </nav>
+      <div class="nav-toggle">
+        <span class="menu-toggle"><i class="fa-solid fa-bars"></i></span>
+      </div>
     </header>
     <main>
       <article id="home">
