smntra responsive home

--- a/index.html
+++ b/index.html
@@ -32,54 +32,75 @@
     />
   </head>
   <body>
-    <header class="navbar">
-      <div class="nav-title">
-        <a href="#home">A<span>N</span>.</a>
-      </div>
-      <nav class="nav-list">
-        <ul>
-          <li><a href="#home" class="nav-link">Home</a></li>
-          <li><a href="#about-me" class="nav-link">About Me</a></li>
-          <li><a href="#education" class="nav-link">Education</a></li>
-          <li><a href="#hobbies" class="nav-link">Hobbies</a></li>
-          <li><a href="#contact" class="nav-link">Contact</a></li>
-        </ul>
-      </nav>
-      <div class="nav-toggle">
-        <span class="menu-toggle"><i class="fa-solid fa-bars"></i></span>
+    <header>
+      <div class="navbar">
+        <div class="nav-title">
+          <a href="#home">A<span>N</span>.</a>
+        </div>
+        <nav>
+          <ul class="nav-list">
+            <li><a href="#home" class="nav-link">Home</a></li>
+            <li><a href="#about-me" class="nav-link">About Me</a></li>
+            <li><a href="#education" class="nav-link">Education</a></li>
+            <li><a href="#hobbies" class="nav-link">Hobbies</a></li>
+            <li><a href="#contact" class="nav-link">Contact</a></li>
+          </ul>
+        </nav>
+        <div class="nav-toggle" id="nav-toggle">
+          <span class="menu-toggle"><i class="fa-solid fa-bars"></i></span>
+        </div>
       </div>
     </header>
     <main>
       <article id="home">
         <div class="home-content">
-          <div class="content-text">
+          <section class="content-text">
             <h2>Hello !</h2>
             <h1>I'm <span>Algy Ngenget</span></h1>
             <h3><span>An</span> Informatics Engineering Student</h3>
-            <p>From Universitas Katolik De La Salle Manado</p>
+            <p>From <em>Catholic University of De La Salle</em> Manado</p>
             <a href="#about-me" class="aboutBtn"
               >See More <i class="fa-solid fa-arrow-right"></i>
             </a>
-          </div>
-          <aside class="content-side">
-            <div class="content-img">
-              <img src="assets/home-foto.jpg" alt="home-foto" />
-            </div>
-            <div class="sosmed">
-              <a href="#"><i class="fab fa-facebook"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-instagram"></i></a>
-              <a href="#"><i class="fab fa-github"></i></a>
-            </div>
+          </section>
+          <section class="sosmed">
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-github"></i></a>
+          </section>
+          <aside class="content-img">
+            <img src="./assets/home-foto.jpg" alt="home-foto" />
           </aside>
         </div>
       </article>
-      <article id="about-me"></article>
-      <article id="education"></article>
-      <article id="hobbies"></article>
-      <article id="contact"></article>
+      <article id="about-me">
+        <div>
+          <section class="content-text">
+            <h2>About Me</h2>
+            <p>
+              My name is Algy Ngenget, born in 1998 in Manado, Indonesia. I'm a
+              passionate and dedicated student. I've always been fascinated by
+              technology and I'm currently pursuing my Bachelor's Degree in
+              Informatics Engineering at Catholic University of De La Salle.
+            </p>
+            <p>
+              I'm a team player and I believe in working together to achieve our
+              goals. I enjoy learning new technologies and sharing them with
+              others. I also love traveling and exploring new cultures.
+            </p>
+            <a href="#" class="aboutBtn"
+              >Back to Home <i class="fa-solid fa-arrow-left"></i>
+            </a>
+          </section>
+        </div>
+      </article>
+      <article id="education">tes</article>
+      <article id="hobbies">tes</article>
+      <article id="contact">tes</article>
     </main>
-    <footer></footer>
-    <script src="js/main.js"></script>
+    <footer>tes</footer>
+    <!-- script -->
+    <script src="js/index.js"></script>
   </body>
 </html>
