--- a/index.html
+++ b/index.html
@@ -63,14 +63,17 @@
               >See More <i class="fa-solid fa-arrow-right"></i>
             </a>
           </section>
-          <section class="sosmed">
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
-          </section>
-          <aside class="content-img">
-            <img src="./assets/home-foto.jpg" alt="home-foto" />
+
+          <aside>
+            <div class="content-img">
+              <img src="./assets/home-foto.jpg" alt="home-foto" />
+            </div>
+            <div class="sosmed">
+              <a href="#"><i class="fab fa-facebook"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="#"><i class="fab fa-github"></i></a>
+            </div>
           </aside>
         </div>
       </article>
