--- a/index.html
+++ b/index.html
@@ -78,24 +78,41 @@
         </div>
       </article>
       <article id="about-me">
-        <div>
-          <section class="content-text">
-            <h2>About Me</h2>
-            <p>
-              My name is Algy Ngenget, born in 1998 in Manado, Indonesia. I'm a
-              passionate and dedicated student. I've always been fascinated by
-              technology and I'm currently pursuing my Bachelor's Degree in
-              Informatics Engineering at Catholic University of De La Salle.
-            </p>
-            <p>
-              I'm a team player and I believe in working together to achieve our
-              goals. I enjoy learning new technologies and sharing them with
-              others. I also love traveling and exploring new cultures.
-            </p>
-            <a href="#" class="aboutBtn"
-              >Back to Home <i class="fa-solid fa-arrow-left"></i>
-            </a>
+        <div class="about-title">
+          <h2 class="article-title">About <span>Me</span></h2>
+        </div>
+        <div class="about-content">
+          <section class="biodata">
+            <table class="tabel-bio">
+              <tr>
+                <th>Name</th>
+                <td>: Algy Fitzgerald Christian Ngenget</td>
+              </tr>
+              <tr>
+                <th>Age</th>
+                <td>: 20</td>
+              </tr>
+              <tr>
+                <th>Address</th>
+                <td>: Manado, Indonesia</td>
+              </tr>
+              <tr>
+                <th>Email</th>
+                <td>: algy@gmail.com</td>
+              </tr>
+              <tr>
+                <th>Phone</th>
+                <td>: 081234567890</td>
+              </tr>
+              <tr>
+                <th>Hobbies</th>
+                <td>: Coding, Reading, Traveling</td>
+              </tr>
+            </table>
           </section>
+          <aside class="profil-bio">
+            <img src="./assets/home-foto.jpg" alt="profil bio" />
+          </aside>
         </div>
       </article>
       <article id="education">tes</article>
