--- a/index.html
+++ b/index.html
@@ -78,35 +78,51 @@
         </div>
       </article>
       <article id="about-me">
-        <div class="about-title">
+        <!-- <div class="about-title">
           <h2 class="article-title">About <span>Me</span></h2>
-        </div>
+        </div> -->
         <div class="about-content">
           <section class="biodata">
+            <h4>Discover</h4>
+            <h2 class="article-title">About <span>Me</span></h2>
+            <p>
+              I'm a passionate and dedicated student of Informatics Engineering
+              at Catholic University of De La Salle, Manado. I have a strong
+              foundation in programming languages such as C++, Java, and Python,
+              and I'm always eager to learn new skills and explore new
+              technologies. I also have a keen interest in humanities,
+              particularly literature and philosophy.
+            </p>
             <table class="tabel-bio">
               <tr>
                 <th>Name</th>
-                <td>: Algy Fitzgerald Christian Ngenget</td>
+                <td>:</td>
+                <td>Algy Fitzgerald Christian Ngenget</td>
               </tr>
               <tr>
                 <th>Age</th>
-                <td>: 20</td>
+                <td>:</td>
+                <td>20</td>
               </tr>
               <tr>
                 <th>Address</th>
-                <td>: Manado, Indonesia</td>
+                <td>:</td>
+                <td>Manado, Indonesia</td>
               </tr>
               <tr>
                 <th>Email</th>
-                <td>: algy@gmail.com</td>
+                <td>:</td>
+                <td>algy@gmail.com</td>
               </tr>
               <tr>
                 <th>Phone</th>
-                <td>: 081234567890</td>
+                <td>:</td>
+                <td>081234567890</td>
               </tr>
               <tr>
                 <th>Hobbies</th>
-                <td>: Coding, Reading, Traveling</td>
+                <td>:</td>
+                <td>Coding, Reading, Traveling</td>
               </tr>
             </table>
           </section>
