--- a/index.html
+++ b/index.html
@@ -78,13 +78,12 @@
         </div>
       </article>
       <article id="about-me">
-        <!-- <div class="about-title">
+        <div class="about-title">
           <h2 class="article-title">About <span>Me</span></h2>
-        </div> -->
+        </div>
         <div class="about-content">
           <section class="biodata">
-            <h4>Discover</h4>
-            <h2 class="article-title">About <span>Me</span></h2>
+            <h3>Hi There !</h3>
             <p>
               I'm a passionate and dedicated student of Informatics Engineering
               at Catholic University of De La Salle, Manado. I have a strong
@@ -95,7 +94,7 @@
             </p>
             <table class="tabel-bio">
               <tr>
-                <th>Name</th>
+                <th>Fullname</th>
                 <td>:</td>
                 <td>Algy Fitzgerald Christian Ngenget</td>
               </tr>
@@ -107,24 +106,25 @@
               <tr>
                 <th>Address</th>
                 <td>:</td>
-                <td>Manado, Indonesia</td>
+                <td>Tomohon, North Sulawesi</td>
               </tr>
               <tr>
-                <th>Email</th>
+                <th>Birth Date</th>
                 <td>:</td>
-                <td>algy@gmail.com</td>
+                <td>25 December 2003</td>
               </tr>
               <tr>
-                <th>Phone</th>
+                <th>Profession</th>
                 <td>:</td>
-                <td>081234567890</td>
+                <td>Student</td>
               </tr>
               <tr>
-                <th>Hobbies</th>
+                <th>Skills</th>
                 <td>:</td>
-                <td>Coding, Reading, Traveling</td>
+                <td>Still Grinding</td>
               </tr>
             </table>
+            <a href="#contact" class="contact-btn"><span>Contact Me</span></a>
           </section>
           <aside class="profil-bio">
             <img src="./assets/home-foto.jpg" alt="profil bio" />
