rombak sedikit dari awal

--- a/index.html
+++ b/index.html
@@ -85,12 +85,11 @@
           <section class="biodata">
             <h3>Hi There !</h3>
             <p>
-              I'm a passionate and dedicated student of Informatics Engineering
-              at Catholic University of De La Salle, Manado. I have a strong
-              foundation in programming languages such as C++, Java, and Python,
-              and I'm always eager to learn new skills and explore new
-              technologies. I also have a keen interest in humanities,
-              particularly literature and philosophy.
+              My name is Algy, I'm a passionate and dedicated student of
+              Informatics Engineering at Catholic University of De La Salle,
+              Manado. I have just entered my 5th semester and I'm always eager
+              to learn new skills and explore new technologies. I also have a
+              keen interest in sports and movies.
             </p>
             <table class="tabel-bio">
               <tr>
@@ -131,7 +130,30 @@
           </aside>
         </div>
       </article>
-      <article id="education">tes</article>
+      <article id="education">
+        <div class="education-title">
+          <h2 class="article-title"><span>Education </span>History</h2>
+        </div>
+        <div class="education-content">
+          <section class="education-list">
+            <div class="education-item">
+              <h3>Catholic University of De La Salle Manado</h3>
+              <p>Bachelor of Science in Informatics Engineering, 2022 - Now</p>
+            </div>
+            <div class="education-item">
+              <h3>Lokon St. Nicholas Senior High School, Tomohon</h3>
+              <p>International Baccalaureate, 2018 - 2021</p>
+            </div>
+            <div class="education-item">
+              <h3>>Lokon St. Nicholas Junior High School, Tomohon</h3>
+              <p>
+                International Certificate in International Relations, 2015 -
+                2018
+              </p>
+            </div>
+          </section>
+        </div>
+      </article>
       <article id="hobbies">tes</article>
       <article id="contact">tes</article>
     </main>
