--- a/index.html
+++ b/index.html
@@ -135,23 +135,20 @@
           <h2 class="article-title"><span>Education </span>History</h2>
         </div>
         <div class="education-content">
-          <section class="education-list">
-            <div class="education-item">
-              <h3>Catholic University of De La Salle Manado</h3>
-              <p>Bachelor of Science in Informatics Engineering, 2022 - Now</p>
-            </div>
-            <div class="education-item">
-              <h3>Lokon St. Nicholas Senior High School, Tomohon</h3>
-              <p>International Baccalaureate, 2018 - 2021</p>
-            </div>
-            <div class="education-item">
-              <h3>>Lokon St. Nicholas Junior High School, Tomohon</h3>
-              <p>
-                International Certificate in International Relations, 2015 -
-                2018
-              </p>
-            </div>
-          </section>
+          <div class="education-item">
+            <h3>Catholic University of De La Salle Manado</h3>
+            <p>Bachelor of Science in Informatics Engineering, 2022 - Now</p>
+          </div>
+          <div class="education-item">
+            <h3>Lokon St. Nicholas Senior High School, Tomohon</h3>
+            <p>International Baccalaureate, 2018 - 2021</p>
+          </div>
+          <div class="education-item">
+            <h3>Lokon St. Nicholas Junior High School, Tomohon</h3>
+            <p>
+              International Certificate in International Relations, 2015 - 2018
+            </p>
+          </div>
         </div>
       </article>
       <article id="hobbies">tes</article>
