bru smpe education

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
       rel="stylesheet"
     />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- icons -->
     <link
       rel="stylesheet"
@@ -23,12 +30,6 @@
       integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
     />
   </head>
   <body>
@@ -135,19 +136,41 @@
           <h2 class="article-title"><span>Education </span>History</h2>
         </div>
         <div class="education-content">
-          <div class="education-item">
-            <h3>Catholic University of De La Salle Manado</h3>
-            <p>Bachelor of Science in Informatics Engineering, 2022 - Now</p>
+          <div class="education-card">
+            <div class="education-img">
+              <img src="./assets/smplokon.jpg" alt="smplokon" />
+            </div>
+
+            <div class="education-info">
+              <span>2015 - 2018</span>
+              <h4>Lokon St. Nicholas Junior High School</h4>
+
+              <p>Tomohon, North Sulawesi</p>
+            </div>
           </div>
-          <div class="education-item">
-            <h3>Lokon St. Nicholas Senior High School, Tomohon</h3>
-            <p>International Baccalaureate, 2018 - 2021</p>
+          <div class="education-card">
+            <div class="education-img">
+              <img src="./assets/smalokon.jpg" alt="smalokon" />
+            </div>
+
+            <div class="education-info">
+              <span>2018 - 2021</span>
+              <h4>Lokon St. Nicholas Senior High School</h4>
+
+              <p>Tomohon, North Sulawesi</p>
+            </div>
           </div>
-          <div class="education-item">
-            <h3>Lokon St. Nicholas Junior High School, Tomohon</h3>
-            <p>
-              International Certificate in International Relations, 2015 - 2018
-            </p>
+
+          <div class="education-card">
+            <div class="education-img">
+              <img src="./assets/delasalle.jpg" alt="delasalle" />
+            </div>
+            <div class="education-info">
+              <span>2022 - Now</span>
+              <h4>Catholic University of De La Salle</h4>
+
+              <p>Manado, North Sulawesi</p>
+            </div>
           </div>
         </div>
       </article>
