--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <h2 class="article-title"><span>Education </span>History</h2>
         </div>
         <div class="education-content">
-          <div class="education-card">
+          <section class="education-card">
             <div class="education-img">
               <img src="./assets/smplokon.jpg" alt="smplokon" />
             </div>
@@ -147,8 +147,8 @@
 
               <p>Tomohon, North Sulawesi</p>
             </div>
-          </div>
-          <div class="education-card">
+          </section>
+          <section class="education-card">
             <div class="education-img">
               <img src="./assets/smalokon.jpg" alt="smalokon" />
             </div>
@@ -159,9 +159,9 @@
 
               <p>Tomohon, North Sulawesi</p>
             </div>
-          </div>
+          </section>
 
-          <div class="education-card">
+          <section class="education-card">
             <div class="education-img">
               <img src="./assets/delasalle.jpg" alt="delasalle" />
             </div>
@@ -171,10 +171,36 @@
 
               <p>Manado, North Sulawesi</p>
             </div>
-          </div>
+          </section>
         </div>
       </article>
-      <article id="hobbies">tes</article>
+      <article id="hobbies">
+        <div class="hobbies-title">
+          <h2 class="article-title"><span>My Hobbies</span></h2>
+        </div>
+        <div class="hobbies-content">
+          <section class="hobbies-item">
+            <img src="./assets/basketball.jpg" alt="basketball" />
+            <h4>Basketball</h4>
+          </section>
+          <section class="hobbies-item">
+            <img src="./assets/movies2.jpg" alt="movies" />
+            <h4>Movies</h4>
+          </section>
+          <section class="hobbies-item">
+            <img src="./assets/hiking.jpg" alt="hiking" />
+            <h4>Hiking</h4>
+          </section>
+          <section class="hobbies-item">
+            <img src="./assets/photography2.jpg" alt="photography" />
+            <h4>Photography</h4>
+          </section>
+          <section class="hobbies-item">
+            <img src="./assets/music4.jpg" alt="music" />
+            <h4>Music</h4>
+          </section>
+        </div>
+      </article>
       <article id="contact">tes</article>
     </main>
     <footer>tes</footer>
