--- a/index.html
+++ b/index.html
@@ -201,9 +201,135 @@
           </section>
         </div>
       </article>
-      <article id="contact">tes</article>
+      <article id="contact">
+        <div class="contact-title">
+          <h2 class="article-title"><span>Contact Me</span></h2>
+        </div>
+        <div class="contact-content">
+          <section class="contact-info">
+            <h3>Contact Information</h3>
+            <p>
+              I'm always open to discussing any projects, opportunities, or
+              collaboration. Feel free to reach out to me at any time. I'm here
+              to help!
+            </p>
+            <div class="contact-detail">
+              <div class="contact-menu">
+                <i class="fas fa-phone"></i>
+                <div class="menu-detail">
+                  <h5>Phone</h5>
+                  <p>+62 812-3456-7890</p>
+                </div>
+              </div>
+              <div class="contact-menu">
+                <i class="fas fa-envelope"></i>
+                <div class="menu-detail">
+                  <h5>Email</h5>
+                  <p>algy@gmail.com</p>
+                </div>
+              </div>
+              <div class="contact-menu">
+                <i class="fas fa-globe"></i>
+                <div class="menu-detail">
+                  <h5>Website</h5>
+                  <p>www.algyfitzgerald.com</p>
+                </div>
+              </div>
+              <div class="contact-menu">
+                <i class="fa-solid fa-address-book"></i>
+                <div class="menu-detail">
+                  <h5>Address</h5>
+                  <p>
+                    Lokon St. Nicholas Junior High School, Tomohon, North
+                    Sulawesi
+                  </p>
+                </div>
+              </div>
+            </div>
+            <h4>
+              <i class="fas fa-map-marker-alt"></i>
+              Tomohon, North Sulawesi
+            </h4>
+          </section>
+          <section class="form-contact">
+            <form action="#" method="POST">
+              <div class="form-group form-title">
+                <h3>Send Me a Message</h3>
+              </div>
+
+              <div class="form-group name">
+                <label for="name">Name</label>
+                <input
+                  type="text"
+                  id="name"
+                  name="name"
+                  required
+                  placeholder="Name"
+                />
+              </div>
+              <div class="form-group subject">
+                <label for="subject">Subject</label>
+                <input
+                  type="text"
+                  id="subject"
+                  name="subject"
+                  required
+                  placeholder="Subject"
+                />
+              </div>
+              <div class="form-group email">
+                <label for="email">Email</label>
+                <input
+                  type="email"
+                  id="email"
+                  name="email"
+                  required
+                  placeholder="Email Address"
+                />
+              </div>
+              <div class="form-group phone">
+                <label for="phone">Phone</label>
+                <input
+                  type="number"
+                  id="phone"
+                  name="phone"
+                  required
+                  placeholder="Phone"
+                />
+              </div>
+              <div class="form-group message">
+                <label for="message">Message</label>
+                <textarea
+                  id="message"
+                  name="message"
+                  required
+                  placeholder="Write a Message"
+                ></textarea>
+              </div>
+
+              <button type="submit" class="submit-form">Send a Message</button>
+            </form>
+          </section>
+        </div>
+      </article>
     </main>
-    <footer>tes</footer>
+    <footer>
+      <div class="footer-container">
+        <h4>
+          &copy; Design by
+          <a href="https://github.com/Isshoo">Isshoo.</a>
+        </h4>
+        <div class="nav-title">
+          <a href="#home">A<span>N</span>.</a>
+        </div>
+        <div class="sosmed">
+          <a href="#"><i class="fab fa-facebook"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-github"></i></a>
+        </div>
+      </div>
+    </footer>
     <!-- script -->
     <script src="js/index.js"></script>
   </body>
