--- a/index.html
+++ b/index.html
@@ -203,15 +203,14 @@
       </article>
       <article id="contact">
         <div class="contact-title">
-          <h2 class="article-title"><span>Contact Me</span></h2>
+          <h2 class="article-title">Contact <span>Me</span></h2>
         </div>
         <div class="contact-content">
           <section class="contact-info">
-            <h3>Contact Information</h3>
+            <h3>Get In Touch</h3>
             <p>
               I'm always open to discussing any projects, opportunities, or
-              collaboration. Feel free to reach out to me at any time. I'm here
-              to help!
+              collaboration. Feel free to reach out to me at any time.
             </p>
             <div class="contact-detail">
               <div class="contact-menu">
@@ -246,10 +245,18 @@
                 </div>
               </div>
             </div>
-            <h4>
-              <i class="fas fa-map-marker-alt"></i>
-              Tomohon, North Sulawesi
-            </h4>
+            <aside>
+              <h4>
+                <i class="fas fa-map-marker-alt"></i>
+                Tomohon, North Sulawesi
+              </h4>
+              <div class="sosmed">
+                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-github"></i></a>
+              </div>
+            </aside>
           </section>
           <section class="form-contact">
             <form action="#" method="POST">
@@ -319,15 +326,8 @@
           &copy; Design by
           <a href="https://github.com/Isshoo">Isshoo.</a>
         </h4>
-        <div class="nav-title">
-          <a href="#home">A<span>N</span>.</a>
-        </div>
-        <div class="sosmed">
-          <a href="#"><i class="fab fa-facebook"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-github"></i></a>
-        </div>
+
+        <h4>2024</h4>
       </div>
     </footer>
     <!-- script -->
