--- a/index.html
+++ b/index.html
@@ -217,31 +217,28 @@
                 <i class="fas fa-phone"></i>
                 <div class="menu-detail">
                   <h5>Phone</h5>
-                  <p>+62 812-3456-7890</p>
+                  <p>+62 821-9892-7471</p>
                 </div>
               </div>
               <div class="contact-menu">
                 <i class="fas fa-envelope"></i>
                 <div class="menu-detail">
                   <h5>Email</h5>
-                  <p>algy@gmail.com</p>
+                  <p>algy25ng@gmail.com</p>
                 </div>
               </div>
               <div class="contact-menu">
                 <i class="fas fa-globe"></i>
                 <div class="menu-detail">
                   <h5>Website</h5>
-                  <p>www.algyfitzgerald.com</p>
+                  <p>www.isshoo.com</p>
                 </div>
               </div>
               <div class="contact-menu">
                 <i class="fa-solid fa-address-book"></i>
                 <div class="menu-detail">
                   <h5>Address</h5>
-                  <p>
-                    Lokon St. Nicholas Junior High School, Tomohon, North
-                    Sulawesi
-                  </p>
+                  <p>Kakaskasen 1 Lingk. 5, Tomohon Utara</p>
                 </div>
               </div>
             </div>
