--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
       referrerpolicy="no-referrer"
     />
   </head>
+
   <body>
+    <!-- navigation bar -->
     <header>
       <div class="navbar">
         <div class="nav-title">
@@ -52,7 +54,11 @@
         </div>
       </div>
     </header>
+    <!-- navigation bar -->
+
+    <!-- main content section -->
     <main>
+      <!-- home section -->
       <article id="home">
         <div class="home-content">
           <section class="content-text">
@@ -64,7 +70,6 @@
               >See More <i class="fa-solid fa-arrow-right"></i>
             </a>
           </section>
-
           <aside>
             <div class="content-img">
               <img src="./assets/home-foto.jpg" alt="home-foto" />
@@ -78,6 +83,9 @@
           </aside>
         </div>
       </article>
+      <!-- home section -->
+
+      <!-- about me section -->
       <article id="about-me">
         <div class="about-title">
           <h2 class="article-title">About <span>Me</span></h2>
@@ -131,6 +139,9 @@
           </aside>
         </div>
       </article>
+      <!-- about me section -->
+
+      <!-- education section -->
       <article id="education">
         <div class="education-title">
           <h2 class="article-title"><span>Education </span>History</h2>
@@ -168,12 +179,14 @@
             <div class="education-info">
               <span>2022 - Now</span>
               <h4>Catholic University of De La Salle</h4>
-
               <p>Manado, North Sulawesi</p>
             </div>
           </section>
         </div>
       </article>
+      <!-- education section -->
+
+      <!-- hobbies section -->
       <article id="hobbies">
         <div class="hobbies-title">
           <h2 class="article-title"><span>My Hobbies</span></h2>
@@ -201,6 +214,9 @@
           </section>
         </div>
       </article>
+      <!-- hobbies section -->
+
+      <!-- contact section -->
       <article id="contact">
         <div class="contact-title">
           <h2 class="article-title">Contact <span>Me</span></h2>
@@ -260,7 +276,6 @@
               <div class="form-group form-title">
                 <h3>Send Me a Message</h3>
               </div>
-
               <div class="form-group name">
                 <label for="name">Name</label>
                 <input
@@ -310,23 +325,27 @@
                   placeholder="Write a Message"
                 ></textarea>
               </div>
-
               <button type="submit" class="submit-form">Send a Message</button>
             </form>
           </section>
         </div>
       </article>
+      <!-- contact section -->
     </main>
+    <!-- main content section -->
+
     <footer>
+      <!-- footer section -->
       <div class="footer-container">
         <h4>
           &copy; Design by
           <a href="https://github.com/Isshoo">Isshoo.</a>
         </h4>
-
         <h4>2024</h4>
       </div>
+      <!-- footer section -->
     </footer>
+
     <!-- script -->
     <script src="js/index.js"></script>
   </body>
