--- a/index.html
+++ b/index.html
@@ -75,10 +75,18 @@
               <img src="./assets/home-foto.jpg" alt="home-foto" />
             </div>
             <div class="sosmed">
-              <a href="#"><i class="fab fa-facebook"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-instagram"></i></a>
-              <a href="#"><i class="fab fa-github"></i></a>
+              <a target="_blank" href="https://facebook.com">
+                <i class="fab fa-facebook"> </i>
+              </a>
+              <a target="_blank" href="https://x.com">
+                <i class="fab fa-twitter"> </i>
+              </a>
+              <a target="_blank" href="https://instagram.com">
+                <i class="fab fa-instagram"> </i>
+              </a>
+              <a target="_blank" href="https://github.com/Isshoo">
+                <i class="fab fa-github"> </i>
+              </a>
             </div>
           </aside>
         </div>
@@ -247,7 +255,7 @@
                 <i class="fas fa-globe"></i>
                 <div class="menu-detail">
                   <h5>Website</h5>
-                  <p>www.isshoo.com</p>
+                  <p>nasa.gov</p>
                 </div>
               </div>
               <div class="contact-menu">
@@ -264,15 +272,23 @@
                 Tomohon, North Sulawesi
               </h4>
               <div class="sosmed">
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-github"></i></a>
+                <a target="_blank" href="https://facebook.com">
+                  <i class="fab fa-facebook"> </i>
+                </a>
+                <a target="_blank" href="https://x.com">
+                  <i class="fab fa-twitter"> </i>
+                </a>
+                <a target="_blank" href="https://instagram.com">
+                  <i class="fab fa-instagram"> </i>
+                </a>
+                <a target="_blank" href="https://github.com/Isshoo">
+                  <i class="fab fa-github"> </i>
+                </a>
               </div>
             </aside>
           </section>
           <section class="form-contact">
-            <form action="#" method="POST">
+            <form method="post" action="">
               <div class="form-group form-title">
                 <h3>Send Me a Message</h3>
               </div>
